# WD-tag-api

./: .gitignore  README.md  dev-run.py  example.secrets.toml  pyproject.toml  requirements.txt  settings.toml
app/: config.py  dependencies.py  main.py
app/internal/: Interrogator.py  interrogator.py
app/routers/: image_handler.py  wd_handler.py
