[tool.poetry]
name = "wd-tag-api"
version = "0.1.0"
description = ""
authors = ["Taruu <taruumax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
loguru = "^0.7.2"
dynaconf = "^3.2.6"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
